# rocket-rust-hello-world

./: Cargo.toml
src/: main.rs
templates/: result.html.tera
